--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -83,7 +83,7 @@
 
 
     <!-- Footer -->
-    <footer class="footer bg-light">
+    <footer class="footer bg-light fixed-bottom">
       <div class="container">
         <div class="row">
           <div class="col-lg-6 h-100 text-center text-lg-left my-auto">
