--- a/ap/templates/account/login.html
+++ b/ap/templates/account/login.html
@@ -11,54 +11,57 @@
     <h1>{% trans "Sign In" %}</h1>
 
     {% get_providers as socialaccount_providers %}
-
     {% if socialaccount_providers %}
-    <p>{% blocktrans with site.name as site_name %}Please sign in with one
-    of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-    for an {{ site_name }} account and sign in below:{% endblocktrans %}</p>
+      <p>
+        Please sign in with one of your social accounts:
+      </p>
 
-    <div class="socialaccount_ballot">
+      <div class="socialaccount_ballot">
 
-      <ul class="socialaccount_providers">
-        {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-      </ul>
+        <ul class="socialaccount_providers">
+          {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+        </ul>
 
-      <div class="login-or">{% trans 'or' %}</div>
+      </div>
 
-    </div>
+      <p>
+        ... or sign in below (<a href="{{ signup_url }}">sign up</a> if you don't already have an account):
+      </p>
 
-    {% include "socialaccount/snippets/login_extra.html" %}
+      {% include "socialaccount/snippets/login_extra.html" %}
 
     {% else %}
-    <p>{% blocktrans %}If you have not created an account yet, then please
-    <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
+      <p>{% blocktrans %}If you have not yet created an account, please
+      <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
     {% endif %}
 
     <form class="login" method="POST" action="{% url 'account_login' %}">
       {% csrf_token %}
 
-
-      <div class="form-group row">
-        <label for="login" class="col-2 col-form-label">Username</label>
-        <div class="col-10">
-          <input
-            class="form-control"
-            type="text"
-            name="login"
-            placeholder="Username"
-            autofocus="autofocus"
-            maxlength="150"
-            required=""
-            id="id_login"
-          >
-        </div>
+      <div class="form-group col-sm-4">
+        <label for="login">Username</label>
+              <input
+                class="form-control"
+                type="text"
+                name="login"
+                placeholder="Username"
+                autofocus="autofocus"
+                maxlength="150"
+                required=""
+                id="id_login"
+              >
       </div>
 
-      <div class="form-group row">
-        <label for="password" class="col-2 col-form-label">Password</label>
-        <div class="col-10">
-          <input class="form-control" type="password" name="password" placeholder="Password" required="" id="id_password">
-        </div>
+      <div class="form-group col-sm-4">
+        <label for="login">Password</label>
+              <input
+                class="form-control"
+                type="text"
+                name="password"
+                placeholder="Password"
+                required="required"
+                id="id_password"
+              >
       </div>
 
       {% if redirect_field_value %}
@@ -66,7 +69,8 @@
       {% endif %}
 
       <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
+      <a class="btn btn-secondary" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
     </form>
-    <a class="" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
+
   </div>
 {% endblock %}
