--- a/ap/templates/account/password_reset.html
+++ b/ap/templates/account/password_reset.html
@@ -14,15 +14,14 @@
         {% endif %}
 
         <p>
-            {% trans "Forgotten your password? Enter your e-mail address below,
-                and we'll send you an e-mail allowing you to reset it." %}
+            Forgotten your password? Enter your e-mail address below and we'll send you a reset e-mail.
         </p>
 
         <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
             {% csrf_token %}
 
             <div class="form-group">
-                <div class="col-sm-4">
+                <div class="col-sm-6">
                     <input
                         type="email"
                         class="form-control"
