--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -57,7 +57,7 @@
 
           <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Link 1</a>
+                <a class="nav-link" href="{% url 'faqs_index' %}">FAQs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link 2</a>
