--- a/ap/templates/core/faqs_index.html
+++ b/ap/templates/core/faqs_index.html
@@ -45,11 +45,13 @@
 
                 <div class="col-lg-4">
                     <div class="features-icons-item mx-auto mb-0 mb-lg-3">
+                        <a href="{% url 'faqs_section' 'Photographers' %}">
                             <div class="features-icons-icon d-flex">
                                 <i class="icon-camera m-auto text-primary"></i>
                             </div>
                             <h3>Photographers</h3>
-                            <p class="lead mb-0">How to register as a photographer, or to upload photos</p>
+                            <p class="lead mb-0">How to register or upload</p>
+                        </a>
                     </div>
                 </div>
             </div>
