--- a/ap/templates/core/faqs_section.html
+++ b/ap/templates/core/faqs_section.html
@@ -13,10 +13,10 @@
                 {% if section_title == "Photographers" %}
                     <dl>
                         <dt>
-                            How do I take a photo
+                            How do I register as a photographer?
                         </dt>
                         <dd>
-                            Do it like this
+                            Let us know about your equipment and send a sample of your work. Contact Us and we'll make you available as a photographer.
                         </dd>
 
                         <dt>
@@ -31,10 +31,10 @@
                 {% if section_title == "Organizers" %}
                     <dl>
                         <dt>
-                            How do I organize
+                            How do I register as an event organizer?
                         </dt>
                         <dd>
-                            Do it like this
+                            Contact Us and let us know a bit about your organization and your role in it. We'll convert your existing account to an Organizer account.
                         </dd>
 
                         <dt>
