--- a/ap/templates/account/email_confirm.html
+++ b/ap/templates/account/email_confirm.html
@@ -3,7 +3,8 @@
 {% load i18n %}
 {% load account %}
 
-{% block head_title %}{% trans "Confirm E-mail Address" %}{% endblock %}
+{% block page_title %}Confirm E-mail Address{% endblock page_title %}
+
 
 {% block content %}
     <div class="container">
