--- a/ap/templates/account/signup.html
+++ b/ap/templates/account/signup.html
@@ -2,7 +2,7 @@
 
 {% load i18n %}
 
-{% block head_title %}{% trans "Signup" %}{% endblock %}
+{% block page_title %}Sign Up{% endblock page_title %}
 
 {% block content %}
   <div class="container">
