--- a/ap/templates/core/faqs_index.html
+++ b/ap/templates/core/faqs_index.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
+{% block page_title %}FAQs{% endblock page_title %}
+
 {% block content %}
 
     <header class="masthead faqs text-white text-center">
