--- a/ap/templates/account/password_reset.html
+++ b/ap/templates/account/password_reset.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account %}
 
-{% block head_title %}{% trans "Password Reset" %}{% endblock %}
+{% block page_title %}Password Reset{% endblock page_title %}
 
 {% block content %}
     <div class="container">
