--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -12,7 +12,7 @@
     <meta name="description" content="Event photography storage, discovery and purchasing platform">
     <meta name="author" content="Scot Hacker, Birdhouse Arts">
 
-    <title>Landing Page - Start Bootstrap Theme</title>
+    <title>athlete.photo - {% block page_title %}{% endblock page_title %}</title>
 
     {% compress css %}
       <link href="{% static 'node_modules/bootstrap/dist/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -56,6 +56,9 @@
       <div class="container">
 
           <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'home' %}">Home</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'faqs_index' %}">FAQs</a>
               </li>
