--- a/ap/templates/core/faqs_section.html
+++ b/ap/templates/core/faqs_section.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
+{% block page_title %}FAQs - {{section_title}}{% endblock page_title %}
+
 {% block content %}
 
     <div class="container">
