--- a/ap/templates/core/home.html
+++ b/ap/templates/core/home.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% load staticfiles %}
 
+{% block page_title %}Home{% endblock page_title %}
+
 {% block content %}
 
     <!-- Masthead -->
