--- a/ap/templates/account/login.html
+++ b/ap/templates/account/login.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load account socialaccount %}
 
-{% block head_title %}{% trans "Sign In" %}{% endblock %}
+{% block page_title %}Sign In{% endblock page_title %}
 
 {% block content %}
 
