Add About links to all FAQ views

--- a/ap/templates/core/faqs_section.html
+++ b/ap/templates/core/faqs_section.html
@@ -15,6 +15,12 @@
                 {% if section_title == "Photographers" %}
                     <dl>
                         <dt>
+                            What is athlete.photo?
+                        </dt>
+                        <dd>
+                            Please see our <a href="{%url 'about' %}">About page</a> for a general explanation.
+                        </dd>
+                        <dt>
                             How do I register as a photographer?
                         </dt>
                         <dd>
@@ -33,6 +39,12 @@
                 {% if section_title == "Organizers" %}
                     <dl>
                         <dt>
+                            What is athlete.photo?
+                        </dt>
+                        <dd>
+                            Please see our <a href="{%url 'about' %}">About page</a> for a general explanation.
+                        </dd>
+                        <dt>
                             How do I register as an event organizer?
                         </dt>
                         <dd>
@@ -50,6 +62,12 @@
 
                 {% if section_title == "Participants" %}
                     <dl>
+                        <dt>
+                            What is athlete.photo?
+                        </dt>
+                        <dd>
+                            Please see our <a href="{%url 'about' %}">About page</a> for a general explanation.
+                        </dd>
                         <dt>
                             How do I participate
                         </dt>
