--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -96,7 +96,7 @@
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
-                <a href="#">Contact</a>
+                <a href="{% url 'contact:contact' %}">Contact</a>
               </li>
               <li class="list-inline-item">&sdot;</li>
               <li class="list-inline-item">
