Link to Contact Us from password reset

--- a/ap/templates/account/password_reset.html
+++ b/ap/templates/account/password_reset.html
@@ -38,7 +38,7 @@
 
         <p>
             {% blocktrans %}
-                Please contact us if you have any trouble resetting your password.
+                Please <a href="{% url 'contact:contact' %}">contact us</a> if you have any trouble resetting your password.
             {% endblocktrans %}
         </p>
 
