Install crispy, make contact form crispy

--- a/ap/templates/account/login.html
+++ b/ap/templates/account/login.html
@@ -5,6 +5,30 @@
 
 {% block page_title %}Sign In{% endblock page_title %}
 
+{% block extra_head %}
+    {# Facebook SDK for social logins #}
+    <script>
+        window.fbAsyncInit = function() {
+          FB.init({
+            appId      : '586231325127969',
+            cookie     : true,
+            xfbml      : true,
+            version    : '3.1'
+          });
+          FB.AppEvents.logPageView();
+        };
+
+        (function(d, s, id){
+            var js, fjs = d.getElementsByTagName(s)[0];
+            if (d.getElementById(id)) {return;}
+            js = d.createElement(s); js.id = id;
+            js.src = "https://connect.facebook.net/en_US/sdk.js";
+            fjs.parentNode.insertBefore(js, fjs);
+          }(document, 'script', 'facebook-jssdk'));
+      </script>
+{% endblock extra_head %}
+
+
 {% block content %}
 
   <div class="container">
