--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -60,6 +60,11 @@
       </div>
     </nav>
 
+    {% if messages %}
+      {% for message in messages %}
+        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message|safe }}</div>
+      {% endfor %}
+    {% endif %}
 
     {% block content %}
 
