--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -60,7 +60,7 @@
 
     {% if messages %}
       {% for message in messages %}
-        <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message|safe }}</div>
+        <div class="messages alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message|safe }}</div>
       {% endfor %}
     {% endif %}
 
