Move FAQs to its own app

--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -39,7 +39,7 @@
                 <a class="nav-link" href="{% url 'home' %}">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'faqs_index' %}">FAQs</a>
+                <a class="nav-link" href="{% url 'faqs:index' %}">FAQs</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link 2</a>
