--- a/ap/templates/faqs/index.html
+++ b/ap/templates/faqs/index.html
@@ -23,7 +23,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                        <a href="{% url 'faqs_section' 'Participants' %}">
+                        <a href="{% url 'faqs:section' 'Participants' %}">
                             <div class="features-icons-icon d-flex">
                                 <i class="icon-people m-auto text-primary"></i>
                             </div>
@@ -35,7 +35,7 @@
 
                 <div class="col-lg-4">
                     <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
-                        <a href="{% url 'faqs_section' 'Organizers' %}">
+                        <a href="{% url 'faqs:section' 'Organizers' %}">
                             <div class="features-icons-icon d-flex">
                                 <i class="icon-layers m-auto text-primary"></i>
                             </div>
@@ -47,7 +47,7 @@
 
                 <div class="col-lg-4">
                     <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                        <a href="{% url 'faqs_section' 'Photographers' %}">
+                        <a href="{% url 'faqs:section' 'Photographers' %}">
                             <div class="features-icons-icon d-flex">
                                 <i class="icon-camera m-auto text-primary"></i>
                             </div>
