Render initial profile details

--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="{% url 'faqs:index' %}">FAQs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
+                <a class="nav-link" href="{% url 'users:list' %}">Athletes</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Link 3</a>
