--- a/ap/templates/users/profile.html
+++ b/ap/templates/users/profile.html
@@ -11,8 +11,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-xl-9 mx-auto">
-                    <h1 class="mb-5">How does this work?<br />
-                        Click a role below to learn more.
+                    <h1 class="mb-5">
+                        change this
                     </h1>
                 </div>
             </div>
@@ -140,59 +140,3 @@
     </div>
 
 {% endblock content %}
-
-
-    about = models.TextField(
-        help_text="Your bio / about you.",
-        blank=True
-    )
-
-    avatar = models.ImageField(
-        blank=True,
-        null=True,
-        upload_to=get_avatar_upload_dir,
-        help_text="An image of you, to be used with your profile."
-    )
-
-    email = models.EmailField(
-        max_length=254,
-        blank=True
-    )
-
-    personal_website = models.URLField(
-        max_length=200,
-        blank=True,
-        help_text="Your blog, profile, or hobby website or page URL."
-    )
-
-    professional_website = models.URLField(
-        max_length=200,
-        blank=True,
-        help_text="Your work-related website or profile page URL."
-    )
-
-    facebook = models.CharField(
-        blank=True,
-        max_length=100,
-        help_text="Your Facebook username (not URL)."
-    )
-
-    twitter = models.CharField(
-        blank=True,
-        max_length=100,
-        help_text="Your Twitter username (not URL)."
-    )
-
-    linkedin = models.CharField(
-        blank=True,
-        max_length=100,
-        verbose_name="LinkedIn",
-        help_text="Your LinkedIn username (not URL)."
-    )
-
-    ap_organizations = models.ManyToManyField(
-        Organization,
-        blank=True,
-        verbose_name="AP Orgs",
-        help_text="Groups or organizations registered on athlete.photo, of which this user is a member.",
-    )
