--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -46,7 +46,7 @@
               </li>
               {% if user.is_authenticated %}
                 <li class="nav-item">
-                  <a class="nav-link" href="{% url 'users:profile' user.username %}">My photos</a>
+                  <a class="nav-link" href="{% url 'users:profile' user.username %}">My Photos</a>
                 </li>
               {% endif %}
             </ul>
