--- a/ap/templates/users/profile.html
+++ b/ap/templates/users/profile.html
@@ -6,137 +6,136 @@
 
 {% block content %}
 
-    <header class="masthead faqs text-white text-center">
-        <div class="overlay"></div>
-        <div class="container">
-            <div class="row">
-                <div class="col-xl-9 mx-auto">
-                    <h1 class="mb-5">
-                        change this
-                    </h1>
-                </div>
-            </div>
-        </div>
-    </header>
-
-
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <h1 class="mt-4">
-                    {{ profile.get_full_name }} ({{profile.username}})
-                </h1>
-
-                {% if profile.avatar %}
-                    <p>
-                        {% thumbnail profile.avatar.file "300x300" crop="center" as im %}
-                            <img
-                                src="{{ im.url }}"
-                                width="{{ im.width }}" height="{{ im.height }}"
-                                alt="{{profile.username}}'s profile image"
-                            />
-                        {% endthumbnail %}
-                    </p>
-                {% else %}
-                    <img
-                        src="{% static 'img/default_profile_200x200.png' %}"
-                        width="200" height="200"
-                        alt="Default profile image"
-                    />
-                {% endif %}
-
-                {% if user == profile and not profile.profile_edited %}
-                    <div class="messages alert alert-warning mt-4">
-                        You have not yet set up your profile. Click EDIT to optionally update your
-                        bio, profile image, social links and more (all optional).
-                    </div>
-                {% endif %}
-
-                {% if profile.about %}
-                    <div class="profile_label">
-                        About {{ profile.username }}
-                    </div>
-                    <p>
-                        {{ profile.about|safe }}
-                    </p>
-                {% endif %}
-
-                {% if profile.personal_website %}
-                    <div class="profile_label">
-                        Personal Website
-                    </div>
-                    <p>
-                        <a href="{{ profile.personal_website }}">{{ profile.personal_website }}</a>
-                    </p>
-                {% endif %}
-
-                {% if profile.professional_website %}
-                    <div class="profile_label">
-                        Professional Website
-                    </div>
-                    <p>
-                        <a href="{{ profile.professional_website }}">{{ profile.professional_website }}</a>
-                    </p>
-                {% endif %}
-
-                {% if profile.facebook %}
-                    <div class="profile_label">
-                        Facebook
-                    </div>
-                    <p>
-                        <a href="https://facebook.com/{{ profile.facebook }}">{{ profile.facebook }}</a>
-                    </p>
-                {% endif %}
-
-                {% if profile.twitter %}
-                    <div class="profile_label">
-                        Twitter
-                    </div>
-                    <p>
-                        <a href="https://twitter.com/{{ profile.twitter }}">{{ profile.twitter }}</a>
-                    </p>
-                {% endif %}
-
-                {% if profile.linkedin %}
-                    <div class="profile_label">
-                        LinkedIn
-                    </div>
-                    <p>
-                        <a href="https://www.linkedin.com/in/{{ profile.linkedin }}/">{{ profile.linkedin }}</a>
-                    </p>
-                {% endif %}
-
-                {% if profile.ap_organizations.count > 0 %}
-                    <div class="profile_label">
-                        Organizations
-                    </div>
-                    <ul>
-                        {% for org in profile.ap_organizations.all  %}
-                            <li>
-                                {{org}} (link when we have org deet page)
-                            </li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-
-
-                {% if profile.photo_set.all %}
-                    <div class="profile_label">
-                        Event photos
-                    </div>
-                    <ul>
-                        {% for photo in profile.photo_set.all  %}
-                            <li>
-                                {{photo}}
-                                {{ photo.file.url }}
-                            </li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-
-
-            </div>
-        </div>
+<header class="masthead faqs text-white text-center">
+  <div class="overlay"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-xl-9 mx-auto">
+        <h1 class="mb-5">
+          change this
+        </h1>
+      </div>
     </div>
+  </div>
+</header>
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-lg-12">
+      <h1 class="mt-4">
+        {{ profile.get_full_name }} ({{profile.username}})
+      </h1>
+
+      {% if user == profile and not profile.profile_edited %}
+      <div class="messages alert alert-warning mt-4 mb-4">
+        You have not yet set up your profile. Please click
+        <a href="{% url 'users:edit_profile' %}">EDIT</a> to optionally update your
+        bio, profile image, social links and more (all optional).
+      </div>
+      {% endif %}
+
+      {% if profile.avatar %}
+      <p>
+        {% thumbnail profile.avatar.file "150x150" crop="center" as im %}
+        <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}" alt="{{profile.username}}'s profile image" />
+        {% endthumbnail %}
+      </p>
+      {% else %}
+      <img src="{% static 'img/default_profile_200x200.png' %}" width="150" height="150" alt="Default profile image" />
+      {% endif %}
+
+      {% if profile.about %}
+      <div class="profile_label">
+        About {{ profile.username }}
+      </div>
+      <p>
+        {{ profile.about|safe }}
+      </p>
+      {% endif %}
+
+      {% if profile.personal_website %}
+      <div class="profile_label">
+        Personal Website
+      </div>
+      <p>
+        <a href="{{ profile.personal_website }}">{{ profile.personal_website }}</a>
+      </p>
+      {% endif %}
+
+      {% if profile.professional_website %}
+      <div class="profile_label">
+        Professional Website
+      </div>
+      <p>
+        <a href="{{ profile.professional_website }}">{{ profile.professional_website }}</a>
+      </p>
+      {% endif %}
+
+      {% if profile.facebook %}
+      <div class="profile_label">
+        Facebook
+      </div>
+      <p>
+        <a href="https://facebook.com/{{ profile.facebook }}">{{ profile.facebook }}</a>
+      </p>
+      {% endif %}
+
+      {% if profile.twitter %}
+      <div class="profile_label">
+        Twitter
+      </div>
+      <p>
+        <a href="https://twitter.com/{{ profile.twitter }}">{{ profile.twitter }}</a>
+      </p>
+      {% endif %}
+
+      {% if profile.linkedin %}
+      <div class="profile_label">
+        LinkedIn
+      </div>
+      <p>
+        <a href="https://www.linkedin.com/in/{{ profile.linkedin }}/">{{ profile.linkedin }}</a>
+      </p>
+      {% endif %}
+
+      {% if profile.ap_organizations.count > 0 %}
+      <div class="profile_label">
+        Organizations
+      </div>
+      <ul>
+        {% for org in profile.ap_organizations.all %}
+        <li>
+          {{org}} (link when we have org deet page)
+        </li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+
+
+      {% if profile.photo_set.all %}
+      <div class="profile_label">
+        Event photos
+      </div>
+      <ul>
+        {% for photo in profile.photo_set.all %}
+        <li>
+          {{photo}}
+          {{ photo.file.url }}
+        </li>
+        {% endfor %}
+      </ul>
+      {% endif %}
+
+      {% if user == profile %}
+      <div class="mb-4">
+        <a class="btn btn-success" href="{% url 'users:edit_profile' %}">Edit/update profile</a>
+      </div>
+      {% endif %}
+
+
+    </div>
+  </div>
+</div>
 
 {% endblock content %}
