More profile formatting, add instagram to user social links

--- a/ap/templates/core/about.html
+++ b/ap/templates/core/about.html
@@ -52,6 +52,12 @@
           on professional event and photograph-publishing platform.
         </p>
 
+        <p>
+          How is athlete.photo different from other event photo sites? Rather than just purchase a photo and move on,
+          here on athlete.photo, purchasing a photo allows other visitors to see the "unlocked" photo on your profile
+          and in Event Galleries. Purchasing a photo unlocks it for everyone!
+        </p>
+
       </div>
     </div>
   </div>
