--- a/ap/templates/core/about.html
+++ b/ap/templates/core/about.html
@@ -56,6 +56,8 @@
           How is athlete.photo different from other event photo sites? Rather than just purchase a photo and move on,
           here on athlete.photo, purchasing a photo allows other visitors to see the "unlocked" photo on your profile
           and in Event Galleries. Purchasing a photo unlocks it for everyone!
+
+          Also, AP lets users upload their own photos, and people can tag themselves whether the main photog or another person uploaded them.
         </p>
 
       </div>
