Add city/state/country to profile; script to populate dev users

--- a/ap/templates/users/profile.html
+++ b/ap/templates/users/profile.html
@@ -35,6 +35,10 @@
           </div>
         {% endif %}
 
+        {% if user == profile %}
+            <a href="{% url 'users:edit_profile' %}">EDIT</a>.
+        {% endif %}
+
         <div class="row">
           <div class="col-lg-2">
             {% if profile.avatar %}
