Start of event list, event.published

--- a/ap/templates/base.html
+++ b/ap/templates/base.html
@@ -47,6 +47,9 @@
                 <a class="nav-link" href="{% url 'faqs:index' %}">FAQs</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'events:index' %}">Events</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'users:list' %}">Athletes</a>
               </li>
 
