--- a/ap/templates/account/login.html
+++ b/ap/templates/account/login.html
@@ -5,30 +5,6 @@
 
 {% block page_title %}Sign In{% endblock page_title %}
 
-{% block extra_head %}
-    {# Facebook SDK for social logins #}
-    <script>
-        window.fbAsyncInit = function() {
-          FB.init({
-            appId      : '586231325127969',
-            cookie     : true,
-            xfbml      : true,
-            version    : '3.1'
-          });
-          FB.AppEvents.logPageView();
-        };
-
-        (function(d, s, id){
-            var js, fjs = d.getElementsByTagName(s)[0];
-            if (d.getElementById(id)) {return;}
-            js = d.createElement(s); js.id = id;
-            js.src = "https://connect.facebook.net/en_US/sdk.js";
-            fjs.parentNode.insertBefore(js, fjs);
-          }(document, 'script', 'facebook-jssdk'));
-      </script>
-{% endblock extra_head %}
-
-
 {% block content %}
 
   <div class="container">
@@ -67,28 +43,28 @@
 
       <div class="form-group col-sm-4">
         <label for="login">Username</label>
-              <input
-                class="form-control"
-                type="text"
-                name="login"
-                placeholder="Username"
-                autofocus="autofocus"
-                maxlength="150"
-                required=""
-                id="id_login"
-              >
+          <input
+            class="form-control"
+            type="text"
+            name="login"
+            placeholder="Username"
+            autofocus="autofocus"
+            maxlength="150"
+            required=""
+            id="id_login"
+          >
       </div>
 
       <div class="form-group col-sm-4">
         <label for="login">Password</label>
-              <input
-                class="form-control"
-                type="text"
-                name="password"
-                placeholder="Password"
-                required="required"
-                id="id_password"
-              >
+          <input
+            class="form-control"
+            type="password"
+            name="password"
+            placeholder="Password"
+            required="required"
+            id="id_password"
+          >
       </div>
 
       {% if redirect_field_value %}
