--- a/ap/templates/events/index.html
+++ b/ap/templates/events/index.html
@@ -4,13 +4,13 @@
 
 {% block content %}
 
-  <header class="masthead faqs text-white text-center">
+  <header class="masthead events text-white text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-xl-9 mx-auto">
-          <h1 class="mb-5">How does this work?<br />
-            Click a role below to learn more.
+          <h1 class="mb-5">Find an Event<br />
+            Bike, Swim, Run, Hike
           </h1>
         </div>
       </div>
