--- a/ap/static/scss/style.scss
+++ b/ap/static/scss/style.scss
@@ -1,5 +1,3 @@
-// Custom SCSS here
-
 body {
     font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   }
@@ -14,58 +12,6 @@ body {
     font-weight: 700;
   }
 
-  header.masthead {
-    position: relative;
-    background-color: #343a40;
-    background: url("../img/bg-masthead.jpg") no-repeat center center;
-    background-size: cover;
-    padding-top: 8rem;
-    padding-bottom: 8rem;
-  }
-
-  header.masthead .overlay {
-    position: absolute;
-    background-color: #212529;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    opacity: 0;
-  }
-
-  header.masthead h1 {
-    font-size: 2rem;
-  }
-
-  header.masthead.faqs {
-    background: url("../img/bg-faqs.jpg") no-repeat center center;
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-
-  header.masthead.about {
-    background: url("../img/bg-about.jpg") no-repeat center center;
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-
-  header.masthead.events {
-    background: url("../img/bg-events.jpg") no-repeat center center;
-    // image-rendering: -webkit-optimize-contrast;
-    // background-size: cover;background-position:50% 50%;
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-
-  @media (min-width: 768px) {
-    header.masthead {
-      padding-top: 12rem;
-      padding-bottom: 12rem;
-    }
-    header.masthead h1 {
-      font-size: 3rem;
-    }
-  }
 
   .showcase .showcase-text {
     padding: 3rem;
@@ -164,3 +110,5 @@ body {
   .media-body {
     margin-left: 20px;
   }
+
+  @import 'masthead';
